syntax = "proto3";

option go_package = "proto/pb";

message GetShotRequest {
  string shooterName = 1;
  int32 incomingDamage = 2;
}
message GetShotResponse {
  string victimName = 1;
  int32 remainingHealth = 2;
}

message StartShootingRequest {}
message StartShootingResponse {}

message GetDeclaredVictoriousRequest {}
message GetDeclaredVictoriousResponse {}

service Cowboy {
  rpc GetShot(GetShotRequest) returns (GetShotResponse) {}
  rpc StartShooting(StartShootingRequest) returns (StartShootingResponse) {}
  rpc GetDeclaredVictorious(GetDeclaredVictoriousRequest) returns (GetDeclaredVictoriousResponse) {}
}
